name:                haskell-gui
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/blueOkiris/haskell-gui#readme
license:             GPL-3
license-file:        LICENSE
author:              Dylan TUrner
maintainer:          dylantdmt@gmail.com
copyright:           2021 Dylan Turner
category:            Web
build-type:          Simple
cabal-version:       >= 1.10
extra-source-files:  README.md

library
  hs-source-dirs:      src
  exposed-modules:     Gui, Container, Widget
  default-language:    Haskell2010
  build-depends:       base >= 4.7 && < 5, gloss

executable haskell-gui-test
  hs-source-dirs:      src
  main-is:             Main.hs
  default-language:    Haskell2010
  other-modules:       Gui, Container, Widget
  build-depends:       base >= 4.7 && < 5, gloss, cereal
